start writing out agency-specific roll-up CSVs of subdomains

--- a/templates/https/guide.html
+++ b/templates/https/guide.html
@@ -40,7 +40,7 @@
         <h4 id="subdomains">What subdomains are measured?</h4>
 
         <p>
-          Pulse currently measures <strong>publicly accessible <code>.gov</code> subdomains</strong> that belong to any of the measured parent domains, that are discovered from <strong>already public sources</strong>.
+          Pulse currently measures <strong><code>.gov</code> subdomains that are publicly accessible over HTTP</strong> that belong to any of the measured parent domains, that are discovered from <strong>already public sources</strong>.
         </p>
 
         <ul>
