--- a/templates/includes/https/donut.html
+++ b/templates/includes/https/donut.html
@@ -35,7 +35,7 @@
             location.href = "/https/domains/";
         });
 
-    d3.json("/data/reports/https.json", function (error, data) {
+    d3.json("{{ "/data/reports/https.json" | frozen_url }}", function (error, data) {
 
         // calculate % client-side
         var uses = Math.round((data.uses / data.eligible) * 100);
