--- a/templates/includes/https/donut.html
+++ b/templates/includes/https/donut.html
@@ -85,7 +85,7 @@
             .attr("dy", "2.5em")
             .attr("fill", "white")
             .text(function(d) {
-                return "USE HTTPS";
+                return "ONDERSTEUNT HTTPS";
         });
 
 
