--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block page_id %}home{% endblock %}
-{% block title %}Pulse - How federal government domains are meeting best practices on the web.{% endblock %}
+{% block title %}Veilig HTTP (HTTPS) - Pulse{% endblock %}
 {% block description %}{{ site.description }}{% endblock %}
 
 {% block content %}
@@ -17,14 +17,7 @@
         data-width="287"
       ></div>
     	{% include 'includes/https/donut.html' %}
-      <a href="/https/domains/" class="button">View HTTPS Results</a>
-    </div>
-    <div class="dap">
-    	<div class="dap_chart"
-        data-width="287"
-      ></div>
-    	{% include 'includes/analytics/donut.html' %}
-      <a href="/analytics/domains/" class="button">View Analytics Results</a>
+      <a href="/https/domains/" class="button">Bekijk HTTPS Resultaten</a>
     </div>
   </div>
 </div>
