--- a/templates/https/guide.html
+++ b/templates/https/guide.html
@@ -1,8 +1,8 @@
 {% extends "layout.html" %}
 
 {% block page_id %}https{% endblock %}
-{% block title %}Secure HTTP (HTTPS) - Pulse{% endblock %}
-{% block description %}How federal government domains are doing at deploying HTTPS.{% endblock %}
+{% block title %}Veilig HTTP (HTTPS) - Pulse{% endblock %}
+{% block description %}De stand van zaken rondom HTTPS bij overheidsdomeinen{% endblock %}
 
 {% block content %}
 
@@ -11,95 +11,109 @@
 <section id="main-content" class="white-bkg">
 
   <nav class="tab-menu" role="tablist">
-    <a href="/https/domains/" class="tab" role="tab" aria-controls="tab-panel" aria-selected="false">By Domain</a>
-    <a href="/https/agencies/" class="tab" role="tab" aria-controls="tab-panel" aria-selected="false">By Agency</a>
-    <span class="tab" role="tab" aria-controls="tab-panel" aria-selected="true">Guidance</span>
+    <a href="/https/domains/" class="tab" role="tab" aria-controls="tab-panel" aria-selected="false">Per Domein</a>
+    <a href="/https/agencies/" class="tab" role="tab" aria-controls="tab-panel" aria-selected="false">Per Overheid</a>
+    <span class="tab" role="tab" aria-controls="tab-panel" aria-selected="true">Informatie</span>
   </nav>
 
   <div id="tab-panel" class="wrapper" role="tabpanel" aria-hidden="false">
 
     <div class="guide">
 
-      <h3>Below you will find some helpful tips to help guide you towards getting a better score on Pulse for your domain or agency. For any further questions, please visit our <a href="/about/">frequently asked questions</a>.</h3>
+      <h3>Deze website is gemaakt door de <a href="https://openstate.eu">Open State Foundation</a> om burgers en overheden inzicht te geven in de stand van zaken rondom HTTPS bij overheidsdomeinen.</h3>
+
+      Het gebruik van een door HTTPS beveiligde websiteverbinding is om verschillende redenen erg belangrijk:
+      <ul class="ul-normal">
+        <li>Alle gegevens die via een onbeveiligde verbinding (HTTP) worden verstuurd zijn te onderscheppen door anderen. Vaak vraag je persoonlijke informatie op bij overheden en die moeten dus goed beschermd worden.</li>
+        <li>Ook verstuur je gevoelige gegevens naar overheidswebsites, door bijvoorbeeld een formulier in te vullen, documenten te verzenden of bepaalde zoektermen te gebruiken. Hierbij geldt ook dat een HTTP verbinding dit niet beveiligt.</li>
+        <li>Gegevens die via een HTTP verbinding worden verstuurd kunnen onderweg veranderd worden door anderen. Enkel bij een HTTPS verbinding weet je zeker dat de ontvangen of verstuurde gegevens niet aangepast zijn.</li>
+        <li>Websites die HTTPS gebruiken kunnen gebruik maken van het moderne HTTP/2 protocol dat zorgt voor een snellere verbinding.</li>
+      </ul>
+
+
+      De resultaten van Pulse komen geautomatiseerd tot stand en het kan zijn dat er fouten tussen zitten. We proberen maandelijks alle domeinen opnieuwe te analyseren zodat de resultaten up to date blijven. We bieden geen individuele hulp bij het oplossen van HTTPS problemen. Desalniettemin staat hieronder handige informatie en tips om een betere score op Pulse te bewerkstellingen voor je domein. Voor andere vragen, bekijk onze <a href="/about/">Veelgestelde vragen</a>.</h3>
+      <br>
+      <br>
 
       <article>
 
-        <h4>What domains are measured?</h4>
+        <h4>Welke domeinen worden er geanalyseerd?</h4>
 
         <p>
-          Pulse measures the presence, enforcement, and quality of HTTPS for <strong>publicly accessible <code>.gov</code> domains</strong> in the federal government's <strong>executive, legislative, and judicial branches</strong>. Domains which do nothing but redirect to other websites <strong>are measured</strong>.
+          Pulse analyseert de ondersteuning, het afdwingen en kwaliteit van HTTPS van publiek toegankelijke Nederlandse overheidsdomeinen. Dit zijn dus zowel domeinen van lokale overheden (gemeenten, gemeenschappelijke regelingen, etc.) als domeinen van de nationale overheid. De <a href="https://github.com/openstate/datasets/blob/master/websites-overheid.csv">lijst van overheidsdomeinen</a> stellen we zelf samen en breiden we altijd uit. Er wordt niet automatisch gezocht naar subdomeinen en aangezien HTTPS per subdomein anders geïmplementeerd kan worden kunnen de resultaten van een geanalyseerd domein niet doorgetrokken worden naar (andere) subdomeinen. Domeinen die enkel redirecten naar andere websites worden ook geanalyseerd.
         </p>
 
         <p>
-          This currently amounts to around 1,200 domains.
+          Op dit moment analyseren we een kleine 1.500 domeinen.
         </p>
 
       </article>
 
       <article>
 
-        <h4>Implementing HTTPS</h4>
+        <h4>HTTPS implementeren</h4>
 
         <p>
-          The process of enabling and enforcing strong HTTPS for a web service can vary widely based on the technology, size, and age of the service.
+          Het proces om sterke HTTPS the ondersteunen en af te dwingen voor een web service kan afhankelijk van de technologie, grootte en ouderdom van de service enorm verschillen.
         </p>
 
+    Deze data laat zien of overheidsdomeinen ondersteuning bieden voor het HTTPS protocol (<code>https://</code>) en hoe sterk de implementatie daarvan is. HTTPS zorgt voor een veilige internetverbinding tussen websites en haar bezoekers. Voor overheidswebsites wordt <a href="https://www.forumstandaardisatie.nl/standaard/https">HTTPS aanbevolen</a> en het onderliggende protocol <a href="https://www.forumstandaardisatie.nl/standaard/tls">TLS is verplicht</a>.
         <p>
-          Agencies working on deploying HTTPS are encouraged to consult <a href="https://https.cio.gov">https.cio.gov</a> for detailed best practices and technical guidance. <a href="https://https.cio.gov">https.cio.gov</a> is <a href="https://github.com/gsa/https">open source</a>, and agencies are also very much encouraged to contribute their own expertise and case studies.
-        </p>
-
-      </article>
-
-      <article>
-
-        <h4>Measuring HTTPS</h4>
-
-        <p>
-          Pulse analyzes the behavior of four "endpoints" of every domain: <code>http://</code>, <code>http://www</code>, <code>https://</code>, and <code>https://www</code>. Data from these endpoints is used to characterize the overall behavior of a domain.
-        </p>
-
-        <p>
-          These measurements are performed using <a href="https://github.com/dhs-ncats/pshtt">open source</a> <a href="https://github.com/18F/domain-scan">tools</a> and the <a href="https://www.ssllabs.com">SSL Labs</a> <a href="https://github.com/ssllabs/ssllabs-scan/blob/stable/ssllabs-api-docs.md">API</a>.
+          Overheden die werken aan het implementeren van HTTPS kunnen voor meer informatie terecht op onder andere de pagina's van Forum Standaardisatie over <a href="https://www.forumstandaardisatie.nl/standaard/https">HTTPS</a> en <a href="https://www.forumstandaardisatie.nl/standaard/tls">TLS</a>. Ook het NCSC (Nationaal Cyber Security Centrum) biedt informatie over <a href="https://www.ncsc.nl/actueel/factsheets/factsheet-https-kan-een-stuk-veiliger.html">HTTPS</a> en <a href="https://www.ncsc.nl/actueel/whitepapers/ict-beveiligingsrichtlijnen-voor-transport-layer-security-tls.html">TLS</a>.
         </p>
 
       </article>
 
       <article>
 
-        <h4>Fields</h4>
+        <h4>HTTPS analyse</h4>
+
+        <p>
+          Pulse analyseert het gedrag van vier "endpoints" van elk domein: <code>http://</code>, <code>http://www</code>, <code>https://</code>, en <code>https://www</code>. Data van deze endpoints wordt gebruikt om het totale gedrag van het domein te bepalen.
+        </p>
+
+        <p>
+          Voor deze analyse wordt gebruikt gemaakt van <a href="https://github.com/dhs-ncats/pshtt">open source</a> <a href="https://github.com/18F/domain-scan">tools</a> en de <a href="https://www.ssllabs.com">SSL Labs</a> <a href="https://github.com/ssllabs/ssllabs-scan/blob/stable/ssllabs-api-docs.md">API</a>.
+        </p>
+
+      </article>
+
+      <article>
+
+        <h4>Velden</h4>
 
         <ul>
-          <li><strong>Uses HTTPS</strong></li>
-          <li><strong>Values:</strong> No, Yes</li>
-          <li>Whether a site can be used over HTTPS, on either its bare domain or its <code>www</code> subdomain. Sites that appear to redirect "down" from HTTPS to HTTP are considered a "No".</li>
+          <li><strong>Ondersteunt HTTPS</strong></li>
+          <li><strong>Waarden:</strong> Nee, Ja</li>
+          <li>Of een domein met HTTPS gebruikt kan worden op ofwel de directe domeinnaam of het <code>www</code> subdomein. Domeinen die van HTTPS terug redirecten naar HTTP worden als een "Nee" beschouwd.</li>
         </ul>
 
         <ul>
-          <li><strong>Enforces HTTPS</strong></li>
-          <li><strong>Values:</strong> No, Yes</li>
-          <li>Whether a domain appears to "default" to using HTTPS. This can be done either by redirecting its HTTP endpoints to HTTPS, or by only being available over HTTPS.</li>
+          <li><strong>Dwingt HTTPS Af</strong></li>
+          <li><strong>Waarden:</strong> Nee, Ja</li>
+          <li>Of een domein standaard HTTPS gebruikt. Dit kan bewerkstelligd worden door ofwel HTTP endpoints te redirecten naar HTTPS of door enkel bereikbaar te zijn via HTTPS.</li>
         </ul>
 
         <ul>
           <li><strong>Strict Transport Security (HSTS)</strong></li>
-          <li><strong>Values:</strong> No, Yes</li>
-          <li>Whether a domain has implemented <a href="https://https.cio.gov/hsts/">HTTP Strict Transport Security</a>, which ensures that <a href="http://caniuse.com/#feat=stricttransportsecurity">supporting browsers</a> will only ever communicate with a domain over HTTPS (even if the user clicks or types in a plain HTTP link).</li>
-          <li>"Yes" means that a valid <code>Strict-Transport-Security</code> header with a <code>max-age</code> value (in seconds) of at least <strong>1 year</strong> (31536000) is present on the domain's default endpoint.</li>
+          <li><strong>Waarden:</strong> Nee, Ja</li>
+          <li>Of een domein <a href="https://https.cio.gov/hsts/">HTTP Strict Transport Security</a> heeft geimplementeerd, wat ervoor zorgt dat <a href="http://caniuse.com/#feat=stricttransportsecurity">browsers die het ondersteunen</a> enkel met dat domein communiceert via HTTPS (zelfs als de gebruiker op een HTTP link klikt).</li>
+          <li>"Ja" betekent dat een geldige <code>Strict-Transport-Security</code> header met een <code>max-age</code> waarde (in seconden) van ten minste <strong>1 jaar</strong> (31536000) aanwezig is op de standaard endpoint van het domein.</li>
         </ul>
 
         <ul>
-          <li><strong>Preloaded (recommended)</strong></li>
-          <li><strong>Values:</strong> Ready, Yes</li>
-          <li>"Ready" means that the domain has implemented a strong HSTS header on its <strong>bare domain</strong> whose policy covers all subdomains, and has indicated consent to <a href="https://hstspreload.appspot.com">preloading by all major browsers</a> as HTTPS-only.</li>
-          <li>"Yes" means that the domain is actually in the publicly versioned <a href="https://chromium.googlesource.com/chromium/src/+/master/net/http/transport_security_state_static.json">Chrome preload list</a>, and has the <code>include_subdomains</code> flag enabled in that list. Reaching this step effectively means that a domain's namespace is permanently and fully committed to HTTPS.</li>
+          <li><strong>Preloaded (aanbevolen)</strong></li>
+          <li><strong>Waarden:</strong> Gereed, Ja</li>
+          <li>"Gereed" betekent dat het domein een sterke HSTS header heeft geïmplementeerd op haar <strong>hoofddomein</strong> waarvan het beleid alle subdomeinen omvat en toestemming heeft gegeven aan <a href="https://hstspreload.appspot.com">preloading door alle grote browsers</a> als HTTPS-only.</li>
+          <li>"Ja" betekent dat het domein daadwerkelijk publiekelijke genoemd wordt in de <a href="https://chromium.googlesource.com/chromium/src/+/master/net/http/transport_security_state_static.json">Chrome preload lijst</a> en de <code>include_subdomains</code> optie in die lijst heeft ingeschakeld. Het bereiken van deze stap betekent in feite dat de namespace van een domein permanent en volledig gebruikt maakt van HTTPS.</li>
         </ul>
 
         <ul>
-          <li><strong>SSL Labs Grade</strong></li>
-          <li><strong>Values:</strong> T, F, C, B, A-, A, A+</li>
-          <li>A grade measuring the <em>quality</em> of HTTPS configuration, as calculated by <a href="https://www.ssllabs.com">SSL Labs</a>. SSL Labs operates a free and universally referenced benchmarking service.</li>
-          <li>Grades are calculated using a <a href="https://www.ssllabs.com/downloads/SSL_Server_Rating_Guide.pdf">detailed methodology</a> that looks at the strength of cryptographic keys, choices of ciphers, supported protocols, and other relevant standards (such as HSTS).</li>
-          <li>Grades are hyperlinked to detailed reports for each domain on SSL Labs. As an example, view the <a href="https://www.ssllabs.com/ssltest/analyze.html?d=pulse.cio.gov">SSL Labs report for Pulse itself</a>.</li>
+          <li><strong>SSL Labs Klasse</strong></li>
+          <li><strong>Waarden:</strong> T, F, C, B, A-, A, A+</li>
+          <li>Een klassering die de <em>kwaliteit</em> van een HTTPS configuratie meet, zoals berekend door <a href="https://www.ssllabs.com">SSL Labs</a>. Dit is een gratis en algemeen gebruikte benchmarkingdienst.</li>
+          <li>De klasseringen worden berekend middels een <a href="https://www.ssllabs.com/downloads/SSL_Server_Rating_Guide.pdf">gedetailleerde methodologie</a> die kijkt naar de sterkte van de cryptografische sleutels, keuze van ciphers, ondersteunde protocollen, en andere relevante standaarden (zoals HSTS).</li>
+          <li>De klasseringen zijn klikbaar en linken voor elk domein naar een gedetailleerd rapport op SSL Labs. Als voorbeeld, bekijk het <a href="https://www.ssllabs.com/ssltest/analyze.html?d=pulse.openstate.eu">SSL Labs rapport voor Pulse zelf</a>.</li>
         </ul>
 
       </article>
