--- a/templates/includes/head.html
+++ b/templates/includes/head.html
@@ -2,7 +2,6 @@
 ================================================== -->
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="google-site-verification" content="xXEGpPeG9CfACp-aeM0kS8pSS9Vk7Z8OS0QB_EehREs" />
 
 <!-- Mobile Specific Metas
 ================================================== -->
@@ -13,8 +12,8 @@
 <!-- Twitter Specific Metas
 ================================================== -->
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:site" content="@USGSA" />
-<meta name="twitter:creator" content="@USGSA" />
+<meta name="twitter:site" content="@OpenStateEU" />
+<meta name="twitter:creator" content="@OpenStateEU" />
 <meta name="twitter:image" content="{{ site.url }}/static/images/logo-pulse.png" />
 <meta name="twitter:image:alt" content="Pulse" />
 
