Add Open State styling

--- a/templates/includes/https/donut.html
+++ b/templates/includes/https/donut.html
@@ -74,7 +74,7 @@
             .attr("text-anchor", "middle")
             .attr("class", "total-value")
             .attr("dy", "0.2em")
-            .attr("fill", "white")
+            .attr("fill", "black")
             .text(function(d){
                 return "" + pie_data[0].value + "%";
         });
@@ -83,7 +83,7 @@
             .attr("text-anchor", "middle")
             .attr("class", "total-desc")
             .attr("dy", "2.5em")
-            .attr("fill", "white")
+            .attr("fill", "black")
             .text(function(d) {
                 return "ONDERSTEUNT HTTPS";
         });
