--- a/static/css/main.css
+++ b/static/css/main.css
@@ -106,6 +106,12 @@ select {
   max-width: 100%;
   width: auto; }
 
+ul.ul-normal {
+  list-style-type: disc;
+  margin: 14px 0;
+  padding-left: 40px;
+}
+
 ul,
 ol {
   list-style-type: none;
@@ -202,31 +208,78 @@ p {
   font-size: 1.0em; }
 
 body {
-  background-color: #0059b3; }
+  background-color: white; }
 
 a {
-  color: white;
+  color: black;
   font-weight: 900; }
   a:active {
-    color: white; }
+    color: black; }
   a:hover {
-    color: white;
+    color: black;
     text-decoration: underline; }
   a:focus {
-    color: white;
+    color: black;
     outline: dotted 1px;
     text-decoration: underline; }
   a:visited {
-    color: white; }
+    color: black; }
+
+.list-inline li {
+  display: inline; }
 
 footer {
-  border-top: 1px solid #003366;
-  color: white;
-  padding: 15px 20px;
+  background-color: rgb(242, 242, 242);
+  color: black;
+  padding: 30px 20px;
   text-align: center; }
 
+.footer-text {
+  width: 30%;
+  float: left; }
+
+.footer-contact {
+  float: left;
+  margin-left: 8%;
+  padding: 20px 0;
+  color: rgb(128, 128, 128) !important;
+  width: 30%; }
+
+.footer-contact li {
+  margin: 5px; }
+
+.footer-item {
+  text-align: left;
+  float: right; }
+
+.footer-item h2 {
+  margin-bottom: 10px; }
+
+.footer-item a {
+  width: 200px;
+  font-weight: 400;
+  display: inline-block; }
+
+.footer-item img {
+  float: left; }
+
+.osf-logo {
+  padding-right: 15px;
+  width: 115px; }
+
+@media screen and (max-width: 767px) {
+  .footer-text, .footer-contact, .footer-item {
+    margin-left: 10%;
+    width: 80%;
+    float: none; }
+
+  .footer-item {
+    width: 30%;
+    margin: 0 auto; }
+}
+
 .button {
-  border: 1px solid white;
+  border: 1px solid black;
   color: white;
   padding: 10px;
   text-align: center;
@@ -267,123 +320,131 @@ a#skipnav {
     -moz-transition: top 0.1s ease-in, background 0.5s linear;
     transition: top 0.1s ease-in, background 0.5s linear; }
 
-#https #content > header,
-#domain #content > header,
-#agency #content > header,
-#analytics #content > header,
-#accessibility #content > header,
-#about #content > header {
+#https #content .big-header,
+#domain #content .big-header,
+#agency #content .big-header,
+#analytics #content .big-header,
+#accessibility #content .big-header,
+#about #content .big-header {
+  background-color: rgb(242, 242, 242);
+  padding-bottom: 40px; }
+#https #content header,
+#domain #content header,
+#agency #content header,
+#analytics #content header,
+#accessibility #content header,
+#about #content header {
   max-width: 68em;
+  background-color: rgb(242, 242, 242);
   margin-left: auto;
   margin-right: auto;
-  color: white;
+  color: rgb(61, 74, 76);
   padding: 30px 0; }
-  #https #content > header:after,
-  #domain #content > header:after,
-  #agency #content > header:after,
-  #analytics #content > header:after,
-  #accessibility #content > header:after,
-  #about #content > header:after {
+  #https #content header:after,
+  #domain #content header:after,
+  #agency #content header:after,
+  #analytics #content header:after,
+  #accessibility #content header:after,
+  #about #content header:after {
     content: "";
     display: table;
     clear: both; }
-  #https #content > header p,
-  #domain #content > header p,
-  #agency #content > header p,
-  #analytics #content > header p,
-  #accessibility #content > header p,
-  #about #content > header p {
+  #https #content header p,
+  #domain #content header p,
+  #agency #content header p,
+  #analytics #content header p,
+  #accessibility #content header p,
+  #about #content header p {
     margin-top: 12px; }
-  #https #content > header a,
-  #domain #content > header a,
-  #agency #content > header a,
-  #analytics #content > header a,
-  #accessibility #content > header a,
-  #about #content > header a {
-    font-weight: bold;
-    color: white; }
-  #https #content > header .donut,
-  #domain #content > header .donut,
-  #agency #content > header .donut,
-  #analytics #content > header .donut,
-  #accessibility #content > header .donut,
-  #about #content > header .donut {
+  #https #content header a,
+  #domain #content header a,
+  #agency #content header a,
+  #analytics #content header a,
+  #accessibility #content header a,
+  #about #content header a {
+    font-weight: bold; }
+  #https #content header .donut,
+  #domain #content header .donut,
+  #agency #content header .donut,
+  #analytics #content header .donut,
+  #accessibility #content header .donut,
+  #about #content header .donut {
     float: left;
     display: block;
     margin-right: 2.35765%;
     width: 23.23176%; }
-    #https #content > header .donut:last-child,
-    #domain #content > header .donut:last-child,
-    #agency #content > header .donut:last-child,
-    #analytics #content > header .donut:last-child,
-    #accessibility #content > header .donut:last-child,
-    #about #content > header .donut:last-child {
+    #https #content header .donut:last-child,
+    #domain #content header .donut:last-child,
+    #agency #content header .donut:last-child,
+    #analytics #content header .donut:last-child,
+    #accessibility #content header .donut:last-child,
+    #about #content header .donut:last-child {
       margin-right: 0; }
     @media screen and (max-width: 767px) {
-      #https #content > header .donut,
-      #domain #content > header .donut,
-      #agency #content > header .donut,
-      #analytics #content > header .donut,
-      #accessibility #content > header .donut,
-      #about #content > header .donut {
+      #https #content header .donut,
+      #domain #content header .donut,
+      #agency #content header .donut,
+      #analytics #content header .donut,
+      #accessibility #content header .donut,
+      #about #content header .donut {
         display: none; } }
-    #https #content > header .donut .total-value,
-    #domain #content > header .donut .total-value,
-    #agency #content > header .donut .total-value,
-    #analytics #content > header .donut .total-value,
-    #accessibility #content > header .donut .total-value,
-    #about #content > header .donut .total-value {
+    #https #content header .donut .total-value,
+    #domain #content header .donut .total-value,
+    #agency #content header .donut .total-value,
+    #analytics #content header .donut .total-value,
+    #accessibility #content header .donut .total-value,
+    #about #content header .donut .total-value {
       font-size: 3em; }
-    #https #content > header .donut .total-desc,
-    #domain #content > header .donut .total-desc,
-    #agency #content > header .donut .total-desc,
-    #analytics #content > header .donut .total-desc,
-    #accessibility #content > header .donut .total-desc,
-    #about #content > header .donut .total-desc {
+    #https #content header .donut .total-desc,
+    #domain #content header .donut .total-desc,
+    #agency #content header .donut .total-desc,
+    #analytics #content header .donut .total-desc,
+    #accessibility #content header .donut .total-desc,
+    #about #content header .donut .total-desc {
       font-size: 0.8em; }
-  #https #content > header.chart,
-  #domain #content > header.chart,
-  #agency #content > header.chart,
-  #analytics #content > header.chart,
-  #accessibility #content > header.chart,
-  #about #content > header.chart {
+  #https #content header.chart,
+  #domain #content header.chart,
+  #agency #content header.chart,
+  #analytics #content header.chart,
+  #accessibility #content header.chart,
+  #about #content header.chart {
     padding: 0; }
-    #https #content > header.chart .description,
-    #domain #content > header.chart .description,
-    #agency #content > header.chart .description,
-    #analytics #content > header.chart .description,
-    #accessibility #content > header.chart .description,
-    #about #content > header.chart .description {
+    #https #content header.chart .description,
+    #domain #content header.chart .description,
+    #agency #content header.chart .description,
+    #analytics #content header.chart .description,
+    #accessibility #content header.chart .description,
+    #about #content header.chart .description {
       float: left;
       display: block;
       margin-right: 2.35765%;
       width: 65.88078%;
       padding-top: 30px; }
-      #https #content > header.chart .description:last-child,
-      #domain #content > header.chart .description:last-child,
-      #agency #content > header.chart .description:last-child,
-      #analytics #content > header.chart .description:last-child,
-      #accessibility #content > header.chart .description:last-child,
-      #about #content > header.chart .description:last-child {
+      #https #content header.chart .description:last-child,
+      #domain #content header.chart .description:last-child,
+      #agency #content header.chart .description:last-child,
+      #analytics #content header.chart .description:last-child,
+      #accessibility #content header.chart .description:last-child,
+      #about #content header.chart .description:last-child {
         margin-right: 0; }
       @media screen and (max-width: 767px) {
-        #https #content > header.chart .description,
-        #domain #content > header.chart .description,
-        #agency #content > header.chart .description,
-        #analytics #content > header.chart .description,
-        #accessibility #content > header.chart .description,
-        #about #content > header.chart .description {
+        #https #content header.chart .description,
+        #domain #content header.chart .description,
+        #agency #content header.chart .description,
+        #analytics #content header.chart .description,
+        #accessibility #content header.chart .description,
+        #about #content header.chart .description {
           float: left;
           display: block;
           margin-right: 2.35765%;
           width: 100%;
           padding: 40px 20px 20px 20px; }
-          #https #content > header.chart .description:last-child,
-          #domain #content > header.chart .description:last-child,
-          #agency #content > header.chart .description:last-child,
-          #analytics #content > header.chart .description:last-child,
-          #accessibility #content > header.chart .description:last-child,
-          #about #content > header.chart .description:last-child {
+          #https #content header.chart .description:last-child,
+          #domain #content header.chart .description:last-child,
+          #agency #content header.chart .description:last-child,
+          #analytics #content header.chart .description:last-child,
+          #accessibility #content header.chart .description:last-child,
+          #about #content header.chart .description:last-child {
             margin-right: 0; } }
 #https #content #main-content .tab-menu,
 #domain #content #main-content .tab-menu,
@@ -391,8 +452,7 @@ a#skipnav {
 #analytics #content #main-content .tab-menu,
 #accessibility #content #main-content .tab-menu,
 #about #content #main-content .tab-menu {
-  width: 100%;
-  margin-top: 40px; }
+  width: 100%; }
   #https #content #main-content .tab-menu .tab,
   #domain #content #main-content .tab-menu .tab,
   #agency #content #main-content .tab-menu .tab,
@@ -411,8 +471,8 @@ a#skipnav {
   #analytics #content #main-content .tab-menu a.tab,
   #accessibility #content #main-content .tab-menu a.tab,
   #about #content #main-content .tab-menu a.tab {
-    background-color: #0059b3;
-    color: white; }
+    background-color: rgb(242, 242, 242);
+    color: black; }
     #https #content #main-content .tab-menu a.tab:hover, #https #content #main-content .tab-menu a.tab:focus,
     #domain #content #main-content .tab-menu a.tab:hover,
     #domain #content #main-content .tab-menu a.tab:focus,
@@ -424,8 +484,8 @@ a#skipnav {
     #accessibility #content #main-content .tab-menu a.tab:focus,
     #about #content #main-content .tab-menu a.tab:hover,
     #about #content #main-content .tab-menu a.tab:focus {
-      background-color: #0073e6;
-      color: white; }
+      background-color: rgb(232, 232, 232);
+      color: black; }
 #https #content #main-content.white-bkg,
 #domain #content #main-content.white-bkg,
 #agency #content #main-content.white-bkg,
@@ -489,7 +549,7 @@ a#skipnav {
         display: block;
         float: none; } }
 .site-header > nav {
-  border-bottom: 1px solid #003366; }
+  border-bottom: 4px solid rgb(242, 242, 242); }
   .site-header > nav #main-nav {
     padding: 10px 0;
     max-width: 68em;
@@ -503,7 +563,7 @@ a#skipnav {
       display: table;
       clear: both; }
     .site-header > nav #main-nav a {
-      color: white; }
+      color: black; }
     .site-header > nav #main-nav h1#branding {
       font-size: 1.875em;
       font-weight: 300;
@@ -600,8 +660,14 @@ a#skipnav {
 .chart h3 {
   font-size: 1.5em; }
 
+#home {
+  background-color: rgb(242, 242, 242); }
+
+header {
+  background-color: white; }
+
 #home .hero {
-  color: white;
+  color: black;
   padding-top: 40px;
   text-align: center;
   float: left;
@@ -619,7 +685,7 @@ a#skipnav {
     font-weight: 100;
     padding-top: 15px; }
 #home #results {
-  padding: 40px 0;
+  padding: 30px 0;
   float: left;
   display: block;
   margin-right: 2.35765%;
@@ -630,10 +696,8 @@ a#skipnav {
   #home #results .https, #home #results .dap {
     margin-bottom: 40px;
     text-align: center;
-    float: left;
     display: block;
     margin-right: 3.57866%;
-    width: 48.21067%;
     display: -webkit-box;
     display: -moz-box;
     display: box;
@@ -801,12 +865,12 @@ a#skipnav {
       .guide article p li {
         padding-bottom: 15px; }
 
-#accessibility #content > header.chart .description {
+#accessibility #content header.chart .description {
   float: left;
   display: block;
   margin-right: 2.35765%;
   width: 100%; }
-  #accessibility #content > header.chart .description:last-child {
+  #accessibility #content header.chart .description:last-child {
     margin-right: 0; }
 #accessibility #content .errorList {
   margin: 7px 0 5px -60px; }
@@ -855,7 +919,7 @@ a#skipnav {
       font-size: 1.15em;
       font-weight: bold; }
 
-#analytics #content > header .donut .total-value {
+#analytics #content header .donut .total-value {
   font-size: 3.5em; }
 #analytics .dataTables_wrapper table.dataTable td:first-child {
   padding: 8px 0 8px 20px !important; }
