--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,9 +1,25 @@
 <footer role="contentinfo">
 	<div class="wrapper">
+      <div class="footer-text">
+        Code open source beschikbaar op <a href="https://github.com/openstate/docker-pulse">GitHub</a>. Gebaseerd op <a href="https://github.com/18F/pulse">Pulse</a> gemaakt door <a href="https://18f.gsa.gov">18F</a>.
 
-    Code open source beschikbaar op <a href="https://github.com/openstate/docker-pulse">GitHub</a>. Gebaseerd op <a href="https://github.com/18F/pulse">Pulse</a> gemaakt door <a href="https://18f.gsa.gov">18F</a>.
-
-    <p>De HTTPS klassering komt tot stand door middel van de <a href="https://www.ssllabs.com/">Qualys SSL Labs API</a>.
-    </p>
+        <p>HTTPS klassering komt tot stand door middel van de <a href="https://www.ssllabs.com/">Qualys SSL Labs API</a>.
+        </p>
+      </div>
+      <div id="contact" class="footer-contact">
+        <ul class="list-inline right-footer-list-padding" style="margin-top: 15px;">
+          <li><a class="right-footer-padding" href="https://www.facebook.com/openstatefoundation" target="_blank"><i class="fa fa-facebook fa-2x text-grey"></i></a></li>
+          <li><a class="right-footer-padding" href="https://twitter.com/OpenStateEU" target="_blank"><i class="fa fa-twitter fa-2x text-grey"></i></a></li>
+          <li><a class="right-footer-padding" href="https://github.com/openstate" target="_blank"><i class="fa fa-github fa-2x text-grey"></i></a></li>
+          <li><a class="right-footer-padding" href="http://openstate.eu/contact"><i class="fa fa-envelope-o fa-2x text-grey"></i></a></li>
+        </ul>
+      </div>
+      <div class="footer-item">
+        <h2>Een project van</h2>
+        <a href="http://openstate.eu">
+          <img class="img-responsive osf-logo" src="/static/images/logo-open-state-foundation.svg">
+          Open<br>State<br>Foundation
+        </a>
+      </div>
 	</div>
 </footer>
