Some small customization stuff

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -16,7 +16,7 @@
       </div>
       <div class="footer-item">
         <h2>Een project van</h2>
-        <a href="http://openstate.eu">
+        <a href="https://openstate.eu">
           <img class="img-responsive osf-logo" src="/static/images/logo-open-state-foundation.svg">
           Open<br>State<br>Foundation
         </a>
