--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,7 @@
 <!-- Title and meta description
 ================================================== -->
 <title>{% block title %}{% endblock title %}</title>
-<meta property="og:title" content="{{ site.title }} | {{ self.title() }}" />
+<meta property="og:title" content="{{ self.title() }}" />
 <meta name="twitter:title" content="{{ self.title() }}" />
 
 <meta name="description" content="{% block description %}{% endblock %}">
