--- a/static/scss/pages/home.scss
+++ b/static/scss/pages/home.scss
@@ -3,7 +3,7 @@
 
 #home {
   .hero {
-    color: white;
+    color: black;
     padding-top: 40px;
     text-align: center;
 
@@ -16,6 +16,7 @@
     }
 
     h3 {
+      font-family: $font-family-monospace !important;
       font-size: $base-font-size * 2;
       font-weight: 100;
       padding-top: 15px;
@@ -23,16 +24,15 @@
   }
 
   #results {
-    padding: 40px 0;
+    padding: 30px 0;
 
     @include span-columns(8);
     @include shift(2);
 
     .https, .dap {
+      font-family: $font-family-monospace !important;
       margin-bottom: 40px;
       text-align: center;
-
-      @include span-columns(4 of 8);
 
       @media (max-width: 970px) {
         width: 100%
