--- a/templates/https/guide.html
+++ b/templates/https/guide.html
@@ -20,7 +20,7 @@
 
     <div class="guide">
 
-      <h3>Deze website is gemaakt door de <a href="https://openstate.eu">Open State Foundation</a> om burgers en overheden inzicht te geven in de stand van zaken rondom HTTPS bij overheidsdomeinen.</h3>
+      <h3>Deze website is gemaakt door de <a href="https://openstate.eu" target="_blank">Open State Foundation</a> om burgers en overheden inzicht te geven in de stand van zaken rondom HTTPS bij overheidsdomeinen.</h3>
 
       Het gebruik van een door HTTPS beveiligde websiteverbinding is om verschillende redenen erg belangrijk:
       <ul class="ul-normal">
@@ -40,7 +40,7 @@
         <h4>Welke domeinen worden er geanalyseerd?</h4>
 
         <p>
-          Pulse analyseert de ondersteuning, het afdwingen en kwaliteit van HTTPS van publiek toegankelijke Nederlandse overheidsdomeinen. Dit zijn dus zowel domeinen van lokale overheden (gemeenten, gemeenschappelijke regelingen, etc.) als domeinen van de nationale overheid. De <a href="https://github.com/openstate/datasets/blob/master/websites-overheid.csv">lijst van overheidsdomeinen</a> stellen we zelf samen en breiden we altijd uit. Er wordt niet automatisch gezocht naar subdomeinen en aangezien HTTPS per subdomein anders geïmplementeerd kan worden kunnen de resultaten van een geanalyseerd domein niet doorgetrokken worden naar (andere) subdomeinen. Domeinen die enkel redirecten naar andere websites worden ook geanalyseerd.
+          Pulse analyseert de ondersteuning, het afdwingen en de kwaliteit van HTTPS van publiek toegankelijke Nederlandse overheidsdomeinen. In Pulse zitten Nederlandse <a href="https://www.communicatierijk.nl/vakkennis/r/rijkswebsites-verplichte-richtlijnen/inhoud/websiteregister" target="_blank">overheidsdomeinen van de Rijksoverheid</a> afkomstig van het Websiteregister van de Rijksoverheid, de <a href="https://www.waarstaatjegemeente.nl/jive?sel_guid=56f41a2d-072b-43ac-9d21-d74e16e2d7b9" target="_blank">domeinen van alle gemeenten</a> via VNG ORCA en <a href="https://data.overheid.nl/data/dataset/gemeenschappelijke-regelingen" target="_blank">domeinen van gemeenschappelijke regelingen</a> met als bron het Ministerie van Binnenlandse Zaken. Daar hebben we zelf nog de domeinen van provincies en waterschappen aan toegevoegd. De domeinen uit deze bronnen zijn samengevoegd in deze <a href="https://raw.githubusercontent.com/openstate/datasets/master/government_domain_names/domains.csv" target="_blank">lijst van overheidsdomeinen</a>. Er wordt niet automatisch gezocht naar subdomeinen en aangezien HTTPS per subdomein anders geïmplementeerd kan worden kunnen de resultaten van een geanalyseerd domein niet doorgetrokken worden naar (andere) subdomeinen. Domeinen die enkel redirecten naar andere websites worden ook geanalyseerd.
         </p>
 
         <p>
@@ -57,9 +57,9 @@
           Het proces om sterke HTTPS the ondersteunen en af te dwingen voor een web service kan afhankelijk van de technologie, grootte en ouderdom van de service enorm verschillen.
         </p>
 
-    Deze data laat zien of overheidsdomeinen ondersteuning bieden voor het HTTPS protocol (<code>https://</code>) en hoe sterk de implementatie daarvan is. HTTPS zorgt voor een veilige internetverbinding tussen websites en haar bezoekers. Voor overheidswebsites wordt <a href="https://www.forumstandaardisatie.nl/standaard/https">HTTPS aanbevolen</a> en het onderliggende protocol <a href="https://www.forumstandaardisatie.nl/standaard/tls">TLS is verplicht</a>.
+    Deze data laat zien of overheidsdomeinen ondersteuning bieden voor het HTTPS protocol (<code>https://</code>) en hoe sterk de implementatie daarvan is. HTTPS zorgt voor een veilige internetverbinding tussen websites en haar bezoekers. Voor overheidswebsites wordt <a href="https://www.forumstandaardisatie.nl/standaard/https" target="_blank">HTTPS aanbevolen</a> en het onderliggende protocol <a href="https://www.forumstandaardisatie.nl/standaard/tls" target="_blank">TLS is verplicht</a>.
         <p>
-          Overheden die werken aan het implementeren van HTTPS kunnen voor meer informatie terecht op onder andere de pagina's van Forum Standaardisatie over <a href="https://www.forumstandaardisatie.nl/standaard/https">HTTPS</a> en <a href="https://www.forumstandaardisatie.nl/standaard/tls">TLS</a>. Ook het NCSC (Nationaal Cyber Security Centrum) biedt informatie over <a href="https://www.ncsc.nl/actueel/factsheets/factsheet-https-kan-een-stuk-veiliger.html">HTTPS</a> en <a href="https://www.ncsc.nl/actueel/whitepapers/ict-beveiligingsrichtlijnen-voor-transport-layer-security-tls.html">TLS</a>.
+          Overheden die werken aan het implementeren van HTTPS kunnen voor meer informatie terecht op onder andere de pagina's van Forum Standaardisatie over <a href="https://www.forumstandaardisatie.nl/standaard/https" target="_blank">HTTPS</a> en <a href="https://www.forumstandaardisatie.nl/standaard/tls" target="_blank">TLS</a>. Ook het NCSC (Nationaal Cyber Security Centrum) biedt informatie over <a href="https://www.ncsc.nl/actueel/factsheets/factsheet-https-kan-een-stuk-veiliger.html" target="_blank">HTTPS</a> en <a href="https://www.ncsc.nl/actueel/whitepapers/ict-beveiligingsrichtlijnen-voor-transport-layer-security-tls.html" target="_blank">TLS</a>.
         </p>
 
       </article>
@@ -73,7 +73,7 @@
         </p>
 
         <p>
-          Voor deze analyse wordt gebruikt gemaakt van <a href="https://github.com/dhs-ncats/pshtt">open source</a> <a href="https://github.com/18F/domain-scan">tools</a> en de <a href="https://www.ssllabs.com">SSL Labs</a> <a href="https://github.com/ssllabs/ssllabs-scan/blob/stable/ssllabs-api-docs.md">API</a>.
+          Voor deze analyse wordt gebruikt gemaakt van <a href="https://github.com/dhs-ncats/pshtt" target="_blank">open source</a> <a href="https://github.com/18F/domain-scan" target="_blank">tools</a> en de <a href="https://www.ssllabs.com" target="_blank">SSL Labs</a> <a href="https://github.com/ssllabs/ssllabs-scan/blob/stable/ssllabs-api-docs.md" target="_blank">API</a>.
         </p>
 
       </article>
@@ -97,7 +97,7 @@
         <ul>
           <li><strong>Strict Transport Security (HSTS)</strong></li>
           <li><strong>Waarden:</strong> Nee, Ja</li>
-          <li>Of een domein <a href="https://https.cio.gov/hsts/">HTTP Strict Transport Security</a> heeft geimplementeerd, wat ervoor zorgt dat <a href="http://caniuse.com/#feat=stricttransportsecurity">browsers die het ondersteunen</a> enkel met dat domein communiceert via HTTPS (zelfs als de gebruiker op een HTTP link klikt).</li>
+          <li>Of een domein <a href="https://nl.wikipedia.org/wiki/HTTP_Strict_Transport_Security" target="_blank">HTTP Strict Transport Security</a> heeft geimplementeerd, wat ervoor zorgt dat <a href="http://caniuse.com/#feat=stricttransportsecurity" target="_blank">browsers die het ondersteunen</a> enkel met dat domein communiceert via HTTPS (zelfs als de gebruiker op een HTTP link klikt).</li>
           <li>"Ja" betekent dat een geldige <code>Strict-Transport-Security</code> header met een <code>max-age</code> waarde (in seconden) van ten minste <strong>1 jaar</strong> (31536000) aanwezig is op de standaard endpoint van het domein.</li>
         </ul>
 
@@ -105,15 +105,15 @@
           <li><strong>Preloaded (aanbevolen)</strong></li>
           <li><strong>Waarden:</strong> Gereed, Ja</li>
           <li>"Gereed" betekent dat het domein een sterke HSTS header heeft geïmplementeerd op haar <strong>hoofddomein</strong> waarvan het beleid alle subdomeinen omvat en toestemming heeft gegeven aan <a href="https://hstspreload.appspot.com">preloading door alle grote browsers</a> als HTTPS-only.</li>
-          <li>"Ja" betekent dat het domein daadwerkelijk publiekelijke genoemd wordt in de <a href="https://chromium.googlesource.com/chromium/src/+/master/net/http/transport_security_state_static.json">Chrome preload lijst</a> en de <code>include_subdomains</code> optie in die lijst heeft ingeschakeld. Het bereiken van deze stap betekent in feite dat de namespace van een domein permanent en volledig gebruikt maakt van HTTPS.</li>
+          <li>"Ja" betekent dat het domein daadwerkelijk publiekelijke genoemd wordt in de <a href="https://chromium.googlesource.com/chromium/src/+/master/net/http/transport_security_state_static.json" target="_blank">Chrome preload lijst</a> en de <code>include_subdomains</code> optie in die lijst heeft ingeschakeld. Het bereiken van deze stap betekent in feite dat de namespace van een domein permanent en volledig gebruikt maakt van HTTPS.</li>
         </ul>
 
         <ul>
           <li><strong>SSL Labs Klasse</strong></li>
           <li><strong>Waarden:</strong> T, F, C, B, A-, A, A+</li>
-          <li>Een klassering die de <em>kwaliteit</em> van een HTTPS configuratie meet, zoals berekend door <a href="https://www.ssllabs.com">SSL Labs</a>. Dit is een gratis en algemeen gebruikte benchmarkingdienst.</li>
-          <li>De klasseringen worden berekend middels een <a href="https://www.ssllabs.com/downloads/SSL_Server_Rating_Guide.pdf">gedetailleerde methodologie</a> die kijkt naar de sterkte van de cryptografische sleutels, keuze van ciphers, ondersteunde protocollen, en andere relevante standaarden (zoals HSTS).</li>
-          <li>De klasseringen zijn klikbaar en linken voor elk domein naar een gedetailleerd rapport op SSL Labs. Als voorbeeld, bekijk het <a href="https://www.ssllabs.com/ssltest/analyze.html?d=pulse.openstate.eu">SSL Labs rapport voor Pulse zelf</a>.</li>
+          <li>Een klassering die de <em>kwaliteit</em> van een HTTPS configuratie meet, zoals berekend door <a href="https://www.ssllabs.com" target="_blank">SSL Labs</a>. Dit is een gratis en algemeen gebruikte benchmarkingdienst.</li>
+          <li>De klasseringen worden berekend middels een <a href="https://www.ssllabs.com/downloads/SSL_Server_Rating_Guide.pdf" target="_blank">gedetailleerde methodologie</a> die kijkt naar de sterkte van de cryptografische sleutels, keuze van ciphers, ondersteunde protocollen, en andere relevante standaarden (zoals HSTS).</li>
+          <li>De klasseringen zijn klikbaar en linken voor elk domein naar een gedetailleerd rapport op SSL Labs. Als voorbeeld, bekijk het <a href="https://www.ssllabs.com/ssltest/analyze.html?d=pulse.openstate.eu" target="_blank">SSL Labs rapport voor Pulse zelf</a>.</li>
         </ul>
 
       </article>
