Add "Contact" link; Add fixed main-nav; Fixed responsive tab text wrapping issue; Fixed typo

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -327,6 +327,7 @@ a#skipnav {
 #analytics #content .big-header,
 #accessibility #content .big-header,
 #about #content .big-header {
+  margin-top: 54px;
   font-family: "Source Code Pro", monospace;
   background-color: #f2f2f2;
   padding-bottom: 40px; }
@@ -467,6 +468,14 @@ a#skipnav {
     text-align: center;
     padding: 30px 0;
     font-size: 1.5em; }
+  @media screen and (max-width: 431px) {
+    #https #content #main-content .tab-menu .tab,
+    #domain #content #main-content .tab-menu .tab,
+    #agency #content #main-content .tab-menu .tab,
+    #analytics #content #main-content .tab-menu .tab,
+    #accessibility #content #main-content .tab-menu .tab,
+    #about #content #main-content .tab-menu .tab {
+      height: 123px; } }
   #https #content #main-content .tab-menu a.tab,
   #domain #content #main-content .tab-menu a.tab,
   #agency #content #main-content .tab-menu a.tab,
@@ -531,7 +540,13 @@ a#skipnav {
   width: 1px; }
 
 .site-header {
-  max-height: 50px; }
+  max-height: 50px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  z-index: 999; }
   .site-header .disclaimer {
     background-color: #003366;
     color: white;
@@ -555,6 +570,7 @@ a#skipnav {
   .site-header > nav {
     border-bottom: 4px solid #F2F2F2; }
     .site-header > nav #main-nav {
+      max-height: 50px;
       padding: 10px 0;
       max-width: 68em;
       margin-left: auto;
