--- a/templates/https/agencies.html
+++ b/templates/https/agencies.html
@@ -13,7 +13,7 @@
   <nav class="tab-menu" role="tablist">
     <a href="/https/domains/" class="tab" role="tab" aria-controls="tab-panel" aria-selected="false">Per Domein</a>
     <span class="tab" role="tab" aria-controls="tab-panel" aria-selected="true">Per Overheid</span>
-    <a href="/https/guidance/" class="tab" role="tab" aria-controls="tab-panel" aria-selected="false">Informatie</a>
+    <a href="/https/guidance/" class="tab" role="tab" aria-controls="tab-panel" aria-selected="false">Info</a>
   </nav>
 
   <div id="tab-panel" class="wrapper" role="tabpanel" aria-hidden="false">
