--- a/templates/https/guide.html
+++ b/templates/https/guide.html
@@ -13,7 +13,7 @@
   <nav class="tab-menu" role="tablist">
     <a href="/https/domains/" class="tab" role="tab" aria-controls="tab-panel" aria-selected="false">Per Domein</a>
     <a href="/https/agencies/" class="tab" role="tab" aria-controls="tab-panel" aria-selected="false">Per Overheid</a>
-    <span class="tab" role="tab" aria-controls="tab-panel" aria-selected="true">Informatie</span>
+    <span class="tab" role="tab" aria-controls="tab-panel" aria-selected="true">Info</span>
   </nav>
 
   <div id="tab-panel" class="wrapper" role="tabpanel" aria-hidden="false">
