--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -8,6 +8,9 @@
             <li>
                 <a href="/https/domains/">HTTPS</a>
             </li>
+            <li>
+                <a tabindex="-1" href="#contact">Contact</a>
+            </li>
         </ul>
         <a href="#" id="menu-btn">MENU</a>
     </div>
@@ -20,6 +23,9 @@
       </li>
       <li>
           <a tabindex="-1" href="/https/domains/">HTTPS</a>
+      </li>
+      <li>
+          <a tabindex="-1" href="#contact">Contact</a>
       </li>
     </ul>
   </nav>
