Small text update

--- a/templates/https/guide.html
+++ b/templates/https/guide.html
@@ -44,7 +44,7 @@
         </p>
 
         <p>
-          Op dit moment analyseren we een kleine 1.500 domeinen.
+          Op dit moment analyseren we meer dan 1.800 domeinen.
         </p>
 
       </article>
