--- a/templates/https/domains.html
+++ b/templates/https/domains.html
@@ -18,7 +18,7 @@
 
   <div id="tab-panel" class="wrapper" role="tabpanel" aria-hidden="false">
     <table class="domain responsive https">
-      <caption>Veilig HTTP(S) Per Domein. Tabel is sorteerbaar door op de kolomnamen bovenaan de klikken. Elke rij bevat een domain en gerelateerde attributen.</caption>
+      <caption>Veilig HTTP(S) Per Domein. Tabel is sorteerbaar door op de kolomnamen bovenaan de klikken. Elke rij bevat een domein en gerelateerde attributen.</caption>
       <thead>
         <tr>
           <th class="all">Domein</th>
