--- a/templates/https/guide.html
+++ b/templates/https/guide.html
@@ -31,7 +31,7 @@
       </ul>
 
 
-      De resultaten van Pulse komen geautomatiseerd tot stand en het kan zijn dat er fouten tussen zitten. We proberen maandelijks alle domeinen opnieuwe te analyseren zodat de resultaten up to date blijven. We bieden geen individuele hulp bij het oplossen van HTTPS problemen. Desalniettemin staat hieronder handige informatie en tips om een betere score op Pulse te bewerkstellingen voor je domein. Voor andere vragen, bekijk onze <a href="/about/">Veelgestelde vragen</a>.</h3>
+      De resultaten van Pulse komen geautomatiseerd tot stand en het kan zijn dat er fouten tussen zitten. We proberen maandelijks alle domeinen opnieuw te analyseren zodat de resultaten up to date blijven. We bieden geen individuele hulp bij het oplossen van HTTPS problemen. Desalniettemin staat hieronder handige informatie en tips om een betere score op Pulse te bewerkstelligen voor je domein. Voor andere vragen, bekijk onze <a href="/about/">Veelgestelde vragen</a>.</h3>
       <br>
       <br>
 
@@ -40,7 +40,7 @@
         <h4>Welke domeinen worden er geanalyseerd?</h4>
 
         <p>
-          Pulse analyseert de ondersteuning, het afdwingen en de kwaliteit van HTTPS van publiek toegankelijke Nederlandse overheidsdomeinen. In Pulse zitten Nederlandse <a href="https://www.communicatierijk.nl/vakkennis/r/rijkswebsites-verplichte-richtlijnen/inhoud/websiteregister" target="_blank">overheidsdomeinen van de Rijksoverheid</a> afkomstig van het Websiteregister van de Rijksoverheid, de <a href="https://www.waarstaatjegemeente.nl/jive?sel_guid=56f41a2d-072b-43ac-9d21-d74e16e2d7b9" target="_blank">domeinen van alle gemeenten</a> via VNG ORCA en <a href="https://data.overheid.nl/data/dataset/gemeenschappelijke-regelingen" target="_blank">domeinen van gemeenschappelijke regelingen</a> met als bron het Ministerie van Binnenlandse Zaken. Daar hebben we zelf nog de domeinen van provincies en waterschappen aan toegevoegd. De domeinen uit deze bronnen zijn samengevoegd in deze <a href="https://raw.githubusercontent.com/openstate/datasets/master/government_domain_names/domains.csv" target="_blank">lijst van overheidsdomeinen</a>. Er wordt niet automatisch gezocht naar subdomeinen en aangezien HTTPS per subdomein anders geïmplementeerd kan worden kunnen de resultaten van een geanalyseerd domein niet doorgetrokken worden naar (andere) subdomeinen. Domeinen die enkel redirecten naar andere websites worden ook geanalyseerd.
+          Pulse analyseert de ondersteuning, het afdwingen en de kwaliteit van HTTPS van publiek toegankelijke Nederlandse overheidsdomeinen. In Pulse zitten Nederlandse <a href="https://www.communicatierijk.nl/vakkennis/r/rijkswebsites-verplichte-richtlijnen/inhoud/websiteregister" target="_blank">overheidsdomeinen van de Rijksoverheid</a> afkomstig van het Websiteregister van de Rijksoverheid, de <a href="https://www.waarstaatjegemeente.nl/jive?sel_guid=56f41a2d-072b-43ac-9d21-d74e16e2d7b9" target="_blank">domeinen van alle gemeenten</a> via VNG ORCA en <a href="https://data.overheid.nl/data/dataset/gemeenschappelijke-regelingen" target="_blank">domeinen van gemeenschappelijke regelingen</a> met als bron het Ministerie van Binnenlandse Zaken. Daar hebben we zelf nog de domeinen van provincies en waterschappen aan toegevoegd. De domeinen uit deze bronnen zijn samengevoegd in deze <a href="https://github.com/openstate/datasets/blob/master/government_domain_names/domains.csv" target="_blank">lijst van overheidsdomeinen</a>. Er wordt niet automatisch gezocht naar subdomeinen en aangezien HTTPS per subdomein anders geïmplementeerd kan worden kunnen de resultaten van een geanalyseerd domein niet doorgetrokken worden naar (andere) subdomeinen. Domeinen die enkel redirecten naar andere websites worden ook geanalyseerd, maar het domein waar naar geredirect wordt analyseren we niet.
         </p>
 
         <p>
@@ -54,7 +54,7 @@
         <h4>HTTPS implementeren</h4>
 
         <p>
-          Het proces om sterke HTTPS the ondersteunen en af te dwingen voor een web service kan afhankelijk van de technologie, grootte en ouderdom van de service enorm verschillen.
+          Het proces om sterke HTTPS te ondersteunen en af te dwingen voor een web service kan afhankelijk van de technologie, grootte en ouderdom van de service enorm verschillen.
         </p>
 
     Deze data laat zien of overheidsdomeinen ondersteuning bieden voor het HTTPS protocol (<code>https://</code>) en hoe sterk de implementatie daarvan is. HTTPS zorgt voor een veilige internetverbinding tussen websites en haar bezoekers. Voor overheidswebsites wordt <a href="https://www.forumstandaardisatie.nl/standaard/https" target="_blank">HTTPS aanbevolen</a> en het onderliggende protocol <a href="https://www.forumstandaardisatie.nl/standaard/tls" target="_blank">TLS is verplicht</a>.
@@ -97,7 +97,7 @@
         <ul>
           <li><strong>Strict Transport Security (HSTS)</strong></li>
           <li><strong>Waarden:</strong> Nee, Ja</li>
-          <li>Of een domein <a href="https://nl.wikipedia.org/wiki/HTTP_Strict_Transport_Security" target="_blank">HTTP Strict Transport Security</a> heeft geimplementeerd, wat ervoor zorgt dat <a href="http://caniuse.com/#feat=stricttransportsecurity" target="_blank">browsers die het ondersteunen</a> enkel met dat domein communiceert via HTTPS (zelfs als de gebruiker op een HTTP link klikt).</li>
+          <li>Of een domein <a href="https://nl.wikipedia.org/wiki/HTTP_Strict_Transport_Security" target="_blank">HTTP Strict Transport Security</a> heeft geïmplementeerd, wat ervoor zorgt dat <a href="http://caniuse.com/#feat=stricttransportsecurity" target="_blank">browsers die het ondersteunen</a> enkel met dat domein communiceert via HTTPS (zelfs als de gebruiker op een HTTP link klikt).</li>
           <li>"Ja" betekent dat een geldige <code>Strict-Transport-Security</code> header met een <code>max-age</code> waarde (in seconden) van ten minste <strong>1 jaar</strong> (31536000) aanwezig is op de standaard endpoint van het domein.</li>
         </ul>
 
@@ -111,7 +111,7 @@
         <ul>
           <li><strong>SSL Labs Klasse</strong></li>
           <li><strong>Waarden:</strong> T, F, C, B, A-, A, A+</li>
-          <li>Een klassering die de <em>kwaliteit</em> van een HTTPS configuratie meet, zoals berekend door <a href="https://www.ssllabs.com" target="_blank">SSL Labs</a>. Dit is een gratis en algemeen gebruikte benchmarkingdienst.</li>
+          <li>Een klassering die de <em>kwaliteit</em> van een HTTPS configuratie meet, zoals berekend door <a href="https://www.ssllabs.com" target="_blank">SSL Labs</a>. Dit is een gratis en algemeen gebruikte benchmarkdienst.</li>
           <li>De klasseringen worden berekend middels een <a href="https://www.ssllabs.com/downloads/SSL_Server_Rating_Guide.pdf" target="_blank">gedetailleerde methodologie</a> die kijkt naar de sterkte van de cryptografische sleutels, keuze van ciphers, ondersteunde protocollen, en andere relevante standaarden (zoals HSTS).</li>
           <li>De klasseringen zijn klikbaar en linken voor elk domein naar een gedetailleerd rapport op SSL Labs. Als voorbeeld, bekijk het <a href="https://www.ssllabs.com/ssltest/analyze.html?d=pulse.openstate.eu" target="_blank">SSL Labs rapport voor Pulse zelf</a>.</li>
         </ul>
