--- a/templates/includes/https/header.html
+++ b/templates/includes/https/header.html
@@ -8,12 +8,9 @@
 
     <div class="description">
       <h2>Veilig HTTP (HTTPS)</h2>
-      <h3>Laatst bijgwerkt <strong>{{ scan_date | date("%d-%m-%Y") }}</strong></h3>
+      <h3>Laatst bijgewerkt <strong>{{ scan_date | date("%d-%m-%Y") }}</strong></h3>
       <p>
-      Deze data laat zien of overheidsdomeinen ondersteuning bieden voor het HTTPS protocol (<code>https://</code>) en hoe sterk de implementatie daarvan is. HTTPS zorgt voor een veilige internetverbinding tussen websites en haar bezoekers. Voor overheidswebsites wordt <a href="https://www.forumstandaardisatie.nl/standaard/https" target="_blank">HTTPS aanbevolen</a> en het onderliggende protocol <a href="https://www.forumstandaardisatie.nl/standaard/tls" target="_blank">TLS is verplicht</a>.
-      </p>
-      <p>
-        HTTPS heeft over het algemeen geen invloed op de mate waarin een website te hacken is. Voor meer informatie over wat HTTPS wel en niet doet, zie deze <a href="https://www.ncsc.nl/actueel/factsheets/factsheet-https-kan-een-stuk-veiliger.html" target="_blank">HTTPS factsheet</a> en <a href="https://www.ncsc.nl/actueel/whitepapers/ict-beveiligingsrichtlijnen-voor-transport-layer-security-tls.html" target="_blank">TLS whitepaper</a> van het NCSC.
+      Deze data laat zien of overheidswebsites ondersteuning bieden voor het HTTPS protocol (<code>https://</code>) en hoe sterk de implementatie daarvan is. HTTPS zorgt voor een veilige en niet manipuleerbare internetverbinding tussen websites en haar bezoekers.
       </p>
 
       <p>
