--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -135,7 +135,7 @@ footer {
 
 .button {
   border: 1px solid black;
-  color: white;
+  color: black;
   padding: 10px;
   text-align: center;
   text-transform: uppercase;
@@ -289,8 +289,11 @@ a#skipnav {
 
 .https_chart,
 .dap_chart {
-  cursor: pointer;
   padding-top: 15px;
+}
+
+svg {
+  cursor: pointer;
 }
 
 .sr-only {
