--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -11,7 +11,7 @@
           <li><a class="right-footer-padding" href="https://www.facebook.com/openstatefoundation" target="_blank"><i class="fa fa-facebook fa-2x text-grey"></i></a></li>
           <li><a class="right-footer-padding" href="https://twitter.com/OpenStateEU" target="_blank"><i class="fa fa-twitter fa-2x text-grey"></i></a></li>
           <li><a class="right-footer-padding" href="https://github.com/openstate" target="_blank"><i class="fa fa-github fa-2x text-grey"></i></a></li>
-          <li><a class="right-footer-padding" href="http://openstate.eu/contact" target="_blank"><i class="fa fa-envelope-o fa-2x text-grey"></i></a></li>
+          <li><a class="right-footer-padding" href="https://openstate.eu/contact" target="_blank"><i class="fa fa-envelope-o fa-2x text-grey"></i></a></li>
         </ul>
       </div>
       <div class="footer-item">
